css/main.css
/* ... */
#footnotes :target {
  animation: none !important;
  background-color: rgba(247, 59, 106, 0.33);
}
@media screen and (prefers-color-scheme: dark) {
  #footnotes :target {
    background-color: rgba(247, 59, 106, 0.63);
  }
}

/* Reset */

html,
body {
  margin: 0;
  padding: 0
}

html {
  font-size: 120%;
}

body {
  background-color: #FFFEF9;
  color: #23242C;
  font-weight: 400;
  font-style: normal;
  line-height: 1.4;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  padding: 1em;
  position: relative;
  overflow-wrap: anywhere;
  word-break: auto-phrase; /* this is experimental */
}

/* Gap for notches */
#body-inner {
  padding-left: calc(env(safe-area-inset-left) - 1em);
  padding-right: calc(env(safe-area-inset-right) - 1em);
}

@media screen and (min-width: 768px) {
  body {
    padding: 2em;
  }
  /* Gap for notches */
  #body-inner {
    padding-left: calc(env(safe-area-inset-left) - 2em);
    padding-right: calc(env(safe-area-inset-right) - 2em);
  }
}

body::before {
  content: '';
  position: absolute;
  top: 0; left: 0; right: 0; bottom: 0;
  background: url(/images/white-paper-texture-with-flecks.jpg);
  background-repeat: repeat;
  background-size: contain;
  opacity: 0.4;
  z-index: -1;
  pointer-events: none;
}

body.fullscreen {
  overflow: hidden;
}

#body-inner {
  background: url(/images/journal-dots.svg) space 0 0;
  background-size: 20px;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #030518;
    color: #EEEEEE;
  }
  body::before {
    opacity: 0.5;
    filter: invert() brightness(0.7) contrast(1.1);
  }
  #body-inner {
    background-image: url(/images/journal-dots-light.svg);
  }
  .content-post img:not(:hover):not(:focus),
  .posts-list a:not(:hover) img {
    opacity: 0.7;
  }
}

* {
  box-sizing: inherit;
}

address {
  font-style: normal;
}

iframe,
img {
  max-width: 100%;
  max-height: 80vh;
}

/* Links */

a,
a button,
.button-link,
details summary {
  color: #A80084;
  text-decoration: underline;
}

a.active,
a button.active,
.button-link.active {
  text-decoration: none;
}

nav a {
  color: inherit;
}

a:hover,
a button:hover,
.button-link:hover,
details summary:hover {
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  a,
  a button,
  .button-link,
  details summary {
    color: #FF80E8;
  }
}

.icon {
  margin: 0 0.125em;
  text-align: left;
  font-style: normal;
}

a button,
.button-link {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  vertical-align: middle;
  background-image: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.list-reset {
  list-style: none !important;
  padding: 0;
}

.inline-list {
  padding: 0;
}
.inline-list li {
  display: inline;
  line-height: 1.8;
}
.inline-list li:not(:first-child)::before {
  content: '•';
  margin-left: 0.5em;
  margin-right: 0.5em;
  display: inline-block;
  vertical-align: middle;
}
.inline-list.inline-to-prev {
  display: inline;
  padding: 0;
}

/* Header */

.p-name-wrapper {
  margin: 0;
  margin-bottom: 2em;
  text-align: center;
}
@media screen and (min-width: 1124px) {
  .p-name-wrapper:not(:has(.journal-crossout)) {
    text-align: left;
  }
}

.page-header {
  text-align: center;
  margin: 0;
  margin-bottom: 1em;
}

.page-header ul {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 1.3em;
}
@media screen and (min-width: 500px) {
  .page-header ul {
    font-size: 1.8em;
  }
}

.page-header ul li {
  display: inline-block;
  margin: 0 0.25em;
}
@media screen and (min-width: 1124px) {
  .page-header ul {
    margin: 0;
    margin-bottom: 1em;
  }
  .page-header ul li {
    display: list-item;
  }
}

.page-header .logo-list-item {
  display: block;
  margin: 0;
  margin-bottom: 0.5em;
}

#categories-list {
  text-align: center;
}
@media screen and (min-width: 1124px) {
  #categories-list {
    text-align: left;
  }
}

.logo {
  display: block;
  height: 100px;
  width: 100px;
  margin: auto;
  margin-top: 10px; /* enough space to stop focus outline getting chopped off by hidden overflow */
  position: relative;
  flex-shrink: 0;
  overflow: hidden;
}

.logo img,
.logo svg {
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 50%;
}

@media (prefers-color-scheme: dark) {
  .logo svg {
    fill: #fcfcfc;
  }
}

.logo-flipper .logo-journal-circle {
  top: 0;
  left: 0;
}
.logo-flipper .logo-signature {
  top: 4px;
  left: 0;
}
.logo-flipper .logo-myface {
  top: 4px;
  left: 0;
  padding: 18px;
}

@media (min-width: 1000px), (min-height: 700px) {
  .logo-flipper {
    height: 200px;
    width: 200px;
  }
  .logo-flipper .logo-signature {
    top: 8px;
    left: 0;
  }
  .logo-flipper .logo-myface {
    top: 8px;
    left: 0;
    padding: 35px;
  }
}

/* Structure */

body {
  /* ensure background paper and dots fill the screen */
  display: grid;
  min-height: 100vh;
}

@media screen and (min-width: 1124px) {
  .flex-wrapper {
    display: grid;
    grid-template-columns: 2em max-content 1fr 2em;
    grid-template-rows: min-content;
    grid-template-areas: ". header main. " "footer footer footer footer";
  }

  /* TODO: style like binder tabs, so it looks good fixed on the screen instead of floating over the journal dots. */
  .page-header {
    grid-area: header;
    max-height: 100vh;
    position: -webkit-sticky;
    position: sticky;
    top: 2em; /* same as body top padding */
    overflow: auto;
    margin-right: 4em;
  }

  .page-main {
    grid-area: main;
  }

  .page-footer {
    grid-area: footer;
  }
}

#navigation {
  display: flex;
  flex-direction: column;
  align-items: center;
}
@media screen and (min-width: 1124px) {
  #navigation {
    margin-bottom: 1.25em;
  }
}
/* ... */

